assets/css/modale_report.css
dialog#modale-report {
    display: none;
    flex-direction: column;
    position: fixed;
    align-items: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -90%);
    width: 550px;
    height: 290px;
    background: #fafafa;
    border: none;
    border-radius: 20px;
    z-index: 101;
    animation: slideDownReport 0.3s ease;
}

dialog#modale-report[open] {
    display: flex;
}

dialog#modale-report::backdrop {
    background-color: rgba(0, 0, 0, 0.65);
    animation: fadeInBackdrop 0.2s ease;
}

dialog#modale-report header {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    min-height: 43px;
    border-bottom: 1px solid #ddd;
}

span.report-title-cross {
    position: relative;
    color: black;
    font-size: 16px;
    font-weight: bold;
}

img.modale.cross {
    position: absolute;
    top: 12px;
    right: 12px;
    width: 19px;
    height: 19px;
    object-fit: contain;
}

textarea.report {
    margin-top: 15px;
    width: 515px;
    height: 140px;
    padding: 3px;
    border: 1px solid #ddd;
    outline: none;
}

div.report.button {
    display: flex;
    width: 515px;
    height: 50px;
    align-items: center;
    justify-content: space-between;
}

button.report {
    margin-top: 17px;
    padding: 7px 17px;
    border-radius: 8px;
    border: none;
    outline: none;
}

button.report.send {
    background: #B7C6FF;
}

span.report.button.send {
    font-weight: bold;
    color: #fafafa;
}

span.report.button.file {
    font-weight: bold;
}

div.p.report {
    display: flex;
    align-items: center;
    height: 42px;
}

p.report {
    margin-top: 2px;
    font-size: 12px;
    color: #666666;
}

@keyframes slideDownReport {
    from {
        opacity: 0;
        transform: translate(-50%, calc(-90% - 20px));
    }
    to {
        opacity: 1;
        transform: translate(-50%, -90%);
    }
}

@keyframes fadeInBackdrop {
    from { opacity: 0; }
    to { opacity: 1; }
}

@media (max-width: 650px) {
    dialog#modale-report[open] {
        display: flex !important;
        position: fixed !important;
        top: 30vh !important;
        left: 50vw !important;
        transform: translate(-50%, -50%) !important;
        margin: 0 !important;
        padding: 0 15px !important;
        width: 90vw !important;
        max-width: 500px !important;
        height: 285px !important;
        border-radius: 15px;
        animation: none !important;
        z-index: 101;
    }

    
    span.report-title-cross {
        top: 11px;
    }

    textarea.report {
        width: 100% !important;
        height: 120px;
        resize: none;
    }

    div.report.button {
        width: 100% !important;
    }
}

